# keyward

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
scripts/: verify_swap.py
src/keyward/: __init__.py  __main__.py  agent.py  agent_linux.py  cli.py  config.py  daemon.py  discovery.py  filestore.py  inject.py  store.py
tests/: conftest.py  test_agent.py  test_agent_linux.py  test_cli.py  test_daemon.py  test_filestore.py  test_inject.py
